# atlas-tdd-cpp-mai-2022

./: README.md
NimmspielProjekt/: CMakeLists.txt
NimmspielProjekt/tests/: CMakeLists.txt  Mockplayer.h  Mockwriter.h  MyAbstractGameDummy.h  computer_player_test.h
QTEuro2DollarRechner/: CMakeLists.txt  main.cpp  mainwindow.h  mainwindow.ui
QTEuro2DollarRechner/presenter/: euro_to_dollar_presenter.h  euro_to_dollar_presenter_impl.h
QTEuro2DollarRechner/tests/: CMakeLists.txt  euro_to_dollar_presenter_impl_test.cpp
Tag1_01StapelProjekt/: Tag1_01StapelProjekt.sln
Tag1_01StapelProjekt/Tag1_01StapelProjekt/: Stapel.cpp  Stapel.h  Tag1_01StapelProjekt.vcxproj  Tag1_01StapelProjekt.vcxproj.filters
Tag1_01StapelProjekt/Tag1_01StapelProjektTest/: StapelTest.cpp  StapelTest.h  Tag1_01StapelProjektTest.vcxproj  test.cpp
Tag1_03PersonenService/: Tag1_03PersonenService.sln
Tag1_03PersonenService/Tag1_03PersonenService/: Tag1_03PersonenService.cpp  Tag1_03PersonenService.vcxproj  Tag1_03PersonenService.vcxproj.filters
Tag1_04PersonenServiceProjekt/: Tag1_04PersonenServiceProjekt.sln
Tag1_04PersonenServiceProjekt/Tag1_04PersonenServiceProjekt/: Tag1_04PersonenServiceProjekt.vcxproj  Tag1_04PersonenServiceProjekt.vcxproj.filters  personen_repository.h  personen_service_exception.h  personen_service_impl.h
Tag1_04PersonenServiceProjekt/Tag1_04PersonenServiceProjektTest/: Mockpersonen_repository.h  Tag1_04PersonenServiceProjektTest.vcxproj  personen_service_impl_test.cpp  (+1 more)
Tag2_01PersonenServiceProjekt/: CMakeLists.txt
tag1_02Schwein/: tag1_02Schwein.sln
(+25 files in other folders)
